_sass/catalog.scss
/* ... */
/* CARD-STYLES */
.pattern-type {
  cursor: inherit;
  display: flex-start;
  align-items: center;
  user-select: none;
  white-space: nowrap;
  padding-left: 12px;
  padding-right: 12px;
  color: var(--color-secondary-dark);
}
.chip {
  display: inline-flex;
  flex-direction: row-reverse;
  float: right;
  // margin: 4px;
  // background-color: rgb(182, 215, 168);
  background-color: var(--brand-color-primary);
  border: none;
  cursor: default;
  height: 1.5rem;
  outline: none;
  padding-left: 5px;
  font-size: 14px;
  font-family: "Open Sans", sans-serif;
  white-space: nowrap;
  align-items: center;
  border-top-right-radius: 16px;
  border-bottom-left-radius: 16px;
  vertical-align: middle;
  text-decoration: none;
  justify-content: center;
}

.category-label {
  display: inline;
  font-family: "Open Sans", sans-serif;
  font-weight: normal;
  white-space: nowrap;
  border-radius: 1rem;
  background-color: #b6d7a8ff;
  padding: 0.5rem;
  margin: auto;
}

.chip-modal {
  align-self: flex-end;
  float: right;
  box-shadow: 2px 2px 6px grey;
}

.pattern-name {
  color: var(--color-secondary-light);
  font-weight: 1400;
  font-style: bold;
  width: calc(80%);
  margin: auto;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: center;
  padding: 15px 0 15px 0;
}
.pattern-id {
  position: absolute;
  bottom: .5rem;
  right: 0;
  left: 0;
  margin: auto;
  color: var(--color-secondary-light);
  // margin: 0 3px 3px 0;
}
.pattern-image-container {
  display: flex;
  justify-content: center;
}
.pattern-image {
  width: 60%;
  object-fit: contain;
  position: absolute;
}
.patterns-coming-soon {
  max-width: 70%;
  position: relative;
  float: right;
  z-index: 2;
  margin-top: -2.5rem;
  margin-right: -2rem;
  transform: translateY(0%) translateX(0%) rotate(10deg);
  -webkit-transform: translateY(0%) translateX(-0%) rotate(10deg);
  -moz-transform: translateY(0%) translateX(-0%) rotate(10deg);
  -ms-transform: translateY(0%) translateX(-0%) rotate(10deg);
  -o-transform: translateY(0%) translateX(-0%) rotate(10deg);
}

.hidden {
  visibility: hidden;
}

.external-link {
  width: 1rem;
  padding-bottom: 0.5rem;
}

/* CHECKBOX-STYLES */
.filter-wrap {
  // float: left;
  flex:0 0 25%;
  width: 23%;
  padding: 4px;
  border-radius: 15px;
  // margin-top: 5rem;
  // backgroud:var(--background-grey);
  height: fit-content; /* height needs to be increased with regarding to the total no. of patterns */
  .load-more {
    display: none;
  }
}
label {
  display: block;
  padding-left: 15px;
  text-indent: -15px;
}
input {
  width: 20px;
  height: 20px;
  padding: 3px;
  margin: 0;
  vertical-align: middle;
  position: relative;
  top: -1px;
  display: inline;
}
input[type="checkbox"] {
  margin: 0;
}

/* MODAL-STYLES */
.modal-window {
  position: fixed;
  background-color: rgba(0, 0, 0, 0.75);
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 200;
  opacity: 0;
  pointer-events: none;
  transition: all 0.3s;
}
.modal-image {
  width: 220px;
  margin: 30px 30px 2rem 0px;
  float: left;
  height: 100%;
}
::-webkit-scrollbar {
  display: "none";
}

.modal-content {
  display: flex;
  justify-content: flex-end;
  code {
    
    padding: 1rem;
    margin: 1rem auto auto 15rem;
    border-radius: .5rem;
    font-size: .9rem;
    background-color: #1a2421;
    line-height: 1rem;

    color: #eee;
    display: block;
    // & p ul {
    text-align: left;
    // }
    a {
        color: white;
    }
  }
  p {
    color: var(--color-secondary-dark);

  }
  
}


.modal-window > div {
  position: absolute;
  display: flex;
  flex-direction: column;
  height: 78%;
  overflow-x: hidden;
  overflow-y: auto;
  width: 60%;
  top: 55%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 15px;
  background: var(--background-grey);
  padding: 1.5rem 2.5rem 1.5rem 3rem;
}
.modal-window > div::-webkit-scrollbar {
  display: none;
}
.catalog-info {
  text-align: center;
}

// .btn-tooltip-grp {
//   // width: 10rem;
// }

// .tooltip-modal .tooltiptext-modal {
//   // margin-top: 1rem;
// }

::-webkit-scrollbar-corner {
  background-color: transparent;
  display: none;
}

.modal-small-header {
  font-size: 15px;
  display: block;
}
.modal-content {
  font-size: 10px;
  display: block;
}

.modal-content h2 {
  font-size: 2rem;
}

.service-mesh-image {
  height: 50px;
  width: 50px;
}
.modal-close {
  display: flex;
  justify-content: space-between;
  color: #222;
  line-height: 1rem;
  font-size: 1rem;
  display: flex;
  text-align: center;
  text-decoration: none;
  img {
    width: 1rem;
    vertical-align: middle;
  }
}
.modal-pattern-name {
  color: var(--color-secondary-dark);
  text-align: center;
  font-weight: 800;
  font-size: 12px;
  white-space: nowrap;
  padding-top: 7px;
  text-overflow: ellipsis;
  overflow: hidden;
}
.modal-chip {
  display: inline-flex;
  flex-direction: row-reverse;
  float: right;
  background-color: #b6d7a8ff;
  border: none;
  cursor: default;
  height: 1rem;
  outline: none;
  padding: .1rem .5rem;
  font-size: 10px;
  font-family: "Open Sans", sans-serif;
  white-space: nowrap;
  align-items: center;
  border-radius: 16px;
  vertical-align: middle;
  text-decoration: none;
  justify-content: center;
}
.modal-card {
  position: relative;
  background: var(--background-light-cards);
  width: 150px;
  height: 180px;
  padding: 20px;
  border-radius: 15px;
  border: 0;
  transition: 0.4s ease-out;
  box-shadow: 2px 2px 6px 0px #00d3a9;
}
.modal-smp {
  width: 20px;
  bottom: 0;
  right: 0;
  vertical-align: middle;
  padding-right: 2px;
}
.modal-pattern-image {
  width: 55%;
  margin-left: 11%;
  object-fit: contain;
  position: absolute;
  border-radius: 15px;
  padding-bottom: 0px;
}
.modal-pattern-id {
  color: var(--color-secondary-dark);
  position: absolute;
	bottom: 0;
	font-size: 8px;
	right: 0;
	margin: 0px 62px 4px 0px;
}

.modal-container {
  padding: 20px 40px 40px;
  max-width: 600px;
}
/* ... */

